--- a/projects.html
+++ b/projects.html
@@ -26,42 +26,20 @@
     <nav id="sidebar">
       <div class="sidebar-header">
         <div id="utd_logo"><img src="img/UTD_LOGO_ROUND.png" alt="utd_logo" width="95%" /></div>
-        <h3>COVID-19 PROJECTS</h3>
+        <h3>COVID-19 RESEARCH COLLECTIVE</h3>
       </div>
 
       <ul class="list-unstyled components">
-        <p>Dummy Heading</p>
-        <li class="active">
-          <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">HOME</a>
-          <ul class="collapse list-unstyled" id="homeSubmenu">
-            <li>
-              <a href="#">Home 1</a>
-            </li>
-            <li>
-              <a href="#">Home 2</a>
-            </li>
-            <li>
-              <a href="#">Home 3</a>
-            </li>
-          </ul>
+
+        <li >
+          <a href="index.html">HOME</a>
         </li>
         <li>
-          <a href="#">ABOUT</a>
-          <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">PROJECTS</a>
-          <ul class="collapse list-unstyled" id="pageSubmenu">
-            <li>
-              <a href="#">Page 1</a>
-            </li>
-            <li>
-              <a href="#">Page 2</a>
-            </li>
-            <li>
-              <a href="#">Page 3</a>
-            </li>
-          </ul>
+          <a href="about_us.html">ABOUT</a>
         </li>
-        <li>
-          <a href="#">CONTRIBUTORS</a>
+
+          <li class="active">
+          <a href="projects.html">PROJECTS</a>
         </li>
         <li>
           <a href="contact.html">CONTACT US</a>
@@ -80,7 +58,6 @@
       </ul>
 
     </nav>
-
     <!-- Page Content Holder -->
     <div id="content">
 
@@ -390,7 +367,7 @@
 
 
       </div>
-      <footer class="bg-dark text-white mt-4 fixed-bottom">
+      <footer class="bg-dark text-white mt-4 " style="  position: fixed; height: 150px; bottom: 0; width: 100%;">
         <div class="container-fluid py-3">
           <div class="row">
             <div class="col-md-3">
