Fixed footer bug in mobile devices

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 
     <!-- Page Content Holder -->
-    <div id="content" >
+    <div id="content">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -89,7 +89,7 @@
           </div>
         </div>
       </nav>
-      <div class="container" >
+      <div class="container">
 
         <!-- Subtopics row-->
         <div class="row">
@@ -198,9 +198,10 @@
             </div>
           </div>
 
-</div>
         </div>
-        <footer class="bg-dark text-white mt-4"  style="  position: fixed; height: 150px; bottom: 0; width: 100%;">
+      </div>
+      <div style="margin-top:150px;">
+        <footer class="bg-dark text-white mt-4" style="  position: fixed; height: 150px; bottom: 0; width: 100%;">
           <div class="container-fluid py-3">
             <div class="row">
               <div class="col-md-3">
@@ -220,7 +221,7 @@
             </div>
           </div>
         </footer>
-
+      </div>
     </div>
 
   </div>
