--- a/about_us.html
+++ b/about_us.html
@@ -107,7 +107,7 @@
 
         </div>
         <div>
-          <h1><br />Faculties</h1>
+          <h1><br />Faculty</h1>
           <!--Carousel Wrapper-->
           <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel" data-interval="1000">
 
@@ -124,22 +124,6 @@
 
               <!--First slide-->
               <div class="carousel-item active">
-
-                <div class="col-md-3" style="float:left">
-                  <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQEy-FR1Tt9M_g/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=Mu2hbmyRn-rp89Q5BJv5QzWeG9kcvyamNdoZSfYb978" alt="Card image cap">
-                    <div class="card-body">
-                      <h4 class="card-title">Gopal<br> Gupta</h4>
-                      <p class="card-text">Professor<br>
-                        Department of Computer Science<br>
-                        University of Texas at Dallas</p>
-                      <a href="https://www.linkedin.com/in/gopal-gupta-39ba408/" target="_blank" class="btn btn-light"><img src="https://image.flaticon.com/icons/svg/174/174857.svg" width="20" /></a>
-                    </div>
-                  </div>
-                </div>
-
-
-
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
                     <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQGU_Av5Iqu2dA/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=Tp0oxekVPgkR_5VuybLyGSerzB_g0jWG7PCJilui7VE" alt="Card image cap">
@@ -163,7 +147,19 @@
                     </div>
                   </div>
                 </div>
-
+                <div class="col-md-3" style="float:left">
+                  <div class="card mb-2">
+                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQEy-FR1Tt9M_g/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=Mu2hbmyRn-rp89Q5BJv5QzWeG9kcvyamNdoZSfYb978" alt="Card image cap">
+                    <div class="card-body">
+                      <h4 class="card-title">Gopal<br> Gupta</h4>
+                      <p class="card-text">Professor<br>
+                        Department of Computer Science<br>
+                        University of Texas at Dallas</p>
+                      <a href="https://www.linkedin.com/in/gopal-gupta-39ba408/" target="_blank" class="btn btn-light"><img src="https://image.flaticon.com/icons/svg/174/174857.svg" width="20" /></a>
+                    </div>
+                  </div>
+                </div>
+                
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
                     <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQHWhWASLFprgQ/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=9gWb1QSAgimfSqDi8_88J-2pWmHDv0Qf8zxUrZPKXAA" alt="Card image cap">
