--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div>
-          <h1><br />Project Dashoard</h1>
+          <h1><br />COVID 19 Modelling and Predictions</h1>
           <!--Carousel Wrapper-->
           <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
 
@@ -119,17 +119,6 @@
 
               <!--First slide-->
               <div class="carousel-item active">
-
-                <div class="col-md-3" style="float:left">
-                  <div class="card mb-2">
-                    <img class="card-img-top" src="img/Covid.png" alt="Card image cap">
-                    <div class="card-body">
-                      <h4 class="card-title">Covid Visualization</h4>
-                      <p class="card-text">Texas specific visualizaion related to every county in Texas along with the Hopital resource utilization during the Pandemic</p>
-                      <a class="btn btn-primary" href="https://dfwcovid19.utdallas.edu/">Click Here</a>
-                    </div>
-                  </div>
-                </div>
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
@@ -153,22 +142,13 @@
                   </div>
                 </div>
 
-                <div class=" col-md-3" style="float:left">
-                        <div class="card mb-2">
-                          <img class="card-img-top" src="img/IUPR.png" alt="Card image cap">
-                          <div class="card-body">
-                            <h4 class="card-title">The Institute of Urban Policy Research at the University of Texas at Dallas</h4>
-                            <p class="card-text">This report shows the number and the rate of confirmed infections per 100,000 population.</p>
-                            <a class="btn btn-primary" href="https://urbanpolicyresearch.org/covid19/county-data-dashboard">Click Here</a>
-                          </div>
-                        </div>
-                    </div>
+
 
                   </div>
                   <!--/.First slide-->
 
                   <!--Second slide-->
-                  <div class="carousel-item">
+                  <!-- <div class="carousel-item">
 
                     <div class="col-md-3" style="float:left">
                       <div class="card mb-2">
@@ -218,7 +198,7 @@
                       </div>
                     </div>
 
-                  </div>
+                  </div> -->
                   <!--/.Second slide-->
 
 
@@ -231,7 +211,7 @@
 
             </div>
             <div>
-              <h1><br />Student</h1>
+              <h1><br />Covid 19 Data Visualization</h1>
               <!--Carousel Wrapper-->
               <div id="multi-item-example-1" class="carousel slide carousel-multi-item" data-ride="carousel">
 
@@ -248,8 +228,27 @@
 
                   <!--First slide-->
                   <div class="carousel-item active">
-
                     <div class="col-md-3" style="float:left">
+                      <div class="card mb-2">
+                        <img class="card-img-top" src="img/Covid.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h4 class="card-title">Covid Visualization</h4>
+                          <p class="card-text">Texas specific visualizaion related to every county in Texas along with the Hopital resource utilization during the Pandemic</p>
+                          <a class="btn btn-primary" href="https://dfwcovid19.utdallas.edu/">Click Here</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class=" col-md-3" style="float:left">
+                            <div class="card mb-2">
+                              <img class="card-img-top" src="img/IUPR.png" alt="Card image cap">
+                              <div class="card-body">
+                                <h4 class="card-title">The Institute of Urban Policy Research at the University of Texas at Dallas</h4>
+                                <p class="card-text">This report shows the number and the rate of confirmed infections per 100,000 population.</p>
+                                <a class="btn btn-primary" href="https://urbanpolicyresearch.org/covid19/county-data-dashboard">Click Here</a>
+                              </div>
+                            </div>
+                        </div>
+                    <!-- <div class="col-md-3" style="float:left">
                       <div class="card mb-2">
                         <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
                         <div class="card-body">
@@ -259,9 +258,9 @@
                           <a class="btn btn-primary">Button</a>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
-                    <div class="col-md-3" style="float:left">
+                    <!-- <div class="col-md-3" style="float:left">
                       <div class="card mb-2">
                         <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
                         <div class="card-body">
@@ -295,13 +294,13 @@
                           <a class="btn btn-primary">Button</a>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
                   </div>
                   <!--/.First slide-->
 
                   <!--Second slide-->
-                  <div class="carousel-item">
+                  <!-- <div class="carousel-item">
 
                     <div class="col-md-3" style="float:left">
                       <div class="card mb-2">
@@ -351,7 +350,7 @@
                       </div>
                     </div>
 
-                  </div>
+                  </div> -->
                   <!--/.Second slide-->
 
 
