--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Case</a>
+                <a class="nav-link" id = "TexasCases" href="#">Case</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Recovery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Fatality</a>
+                <a class="nav-link" id = "TexasDeaths" href="#">Fatality</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Test</a>
@@ -103,9 +103,9 @@
               </div>
 
               <div class="card-body">
-                <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Some quick example text </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Precautions</h5>
+                <p class="card-text">Precautions to be taken to prevent Covid19</p>
+                <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html" class="btn btn-primary">Click Here</a>
               </div>
             </div>
           </div>
@@ -119,9 +119,9 @@
               </div>
 
               <div class="card-body">
-                <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Some quick example text </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">COVID Self Check</h5>
+                <p class="card-text">Take a self test to check for Covid 19</p>
+                <a href="https://landing.google.com/screener/covid19" class="btn btn-primary">Click Here</a>
               </div>
             </div>
           </div>
@@ -135,9 +135,9 @@
               </div>
 
               <div class="card-body">
-                <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Some quick example text </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Covid 19 Medical Care</h5>
+                <p class="card-text">Find the medical care nearest to UTD</p>
+                <a href="https://medicalcityhealthcare.com/covid-19/" class="btn btn-primary">Click Here</a>
               </div>
             </div>
           </div>
@@ -152,9 +152,9 @@
               </div>
 
               <div class="card-body">
-                <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Some quick example text </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">COVID 19 Visualization</h5>
+                <p class="card-text">Data Modelling and Visualizations</p>
+                <a href="https://jariel97.github.io/projects.html" class="btn btn-primary">Click Here</a>
               </div>
             </div>
           </div>
@@ -168,9 +168,9 @@
               </div>
 
               <div class="card-body">
-                <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Some quick example text </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Covid 19 Mental Health</h5>
+                <p class="card-text">Find the best Mental Helath Resources in Dallas</p>
+                <a href="https://www.metrocareservices.org/en/covid-19-health-wellness-resources-dallas" class="btn btn-primary">Click Here</a>
               </div>
             </div>
           </div>
@@ -209,10 +209,10 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6"> Phone Number
+              <div class="col-md-6"> Phone Number : +1 (972) 883-2974
                 <span class="small">
-                  <br>Email
-                  <br>Physical Address
+                  <br>Email: csdept@utdallas.edu
+                  <br>Physical Address : 800 W Campbell Rd, Richardson, TX 75080
 
                 </span>
               </div>
@@ -233,6 +233,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <!-- Bootstrap JS -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+<script src = "js/TexasNumbers.js">
+texasConfirmedDeaths();
+</script>
 
   <script type="text/javascript">
     $(document).ready(function() {
