--- a/projects.html
+++ b/projects.html
@@ -137,10 +137,34 @@
                     <div class="card-body">
                       <h4 class="card-title">Dr. Wade Fagen-Ulmschneider</h4>
                       <p class="card-text">91-DIVOC is home to many data-forward, high-quality, interactive, and informative visualizations during the pandemic.</p>
-                      <a class="btn btn-primary" href="https://91-divoc.com/"">Click Here</a>
+                      <a class="btn btn-primary" href="https://91-divoc.com/">Click Here</a>
                     </div>
                   </div>
                 </div>
+
+                <div class="col-md-3" style="float:left">
+                  <div class="card md-2">
+                    <img class="card-img-top" src="img/Covid.png" alt="Card image cap">
+                    <div class="card-body">
+                      <h4 class="card-title">Covid Visualization</h4>
+                      <p class="card-text">Texas specific visualizaion related to every county in Texas along with the Hopital resource utilization during the Pandemic</p>
+                      <a class="btn btn-primary" href="https://dfwcovid19.utdallas.edu/">Click Here</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class=" col-md-3" style="float:left">
+                        <div class="card md-2">
+                          <img class="card-img-top" src="img/IUPR.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h4 class="card-title">The Institute of Urban Policy Research at the University of Texas at Dallas</h4>
+                            <p class="card-text">This report shows the number and the rate of confirmed infections per 100,000 population.</p>
+                            <a class="btn btn-primary" href="https://urbanpolicyresearch.org/covid19/county-data-dashboard">Click Here</a>
+                          </div>
+                        </div>
+                    </div>
+
+
 
 
 
@@ -211,7 +235,7 @@
 
             </div>
             <div>
-              <h1><br />Covid 19 Data Visualization</h1>
+              <!-- <h1><br />Covid 19 Data Visualization</h1> -->
               <!--Carousel Wrapper-->
               <div id="multi-item-example-1" class="carousel slide carousel-multi-item" data-ride="carousel">
 
@@ -228,8 +252,8 @@
 
                   <!--First slide-->
                   <div class="carousel-item active">
-                    <div class="col-md-3" style="float:left">
-                      <div class="card mb-2">
+                    <!-- <div class="col-md-3" style="float:left">
+                      <div class="card md-2">
                         <img class="card-img-top" src="img/Covid.png" alt="Card image cap">
                         <div class="card-body">
                           <h4 class="card-title">Covid Visualization</h4>
@@ -239,7 +263,7 @@
                       </div>
                     </div>
                     <div class=" col-md-3" style="float:left">
-                            <div class="card mb-2">
+                            <div class="card md-2">
                               <img class="card-img-top" src="img/IUPR.png" alt="Card image cap">
                               <div class="card-body">
                                 <h4 class="card-title">The Institute of Urban Policy Research at the University of Texas at Dallas</h4>
@@ -247,7 +271,7 @@
                                 <a class="btn btn-primary" href="https://urbanpolicyresearch.org/covid19/county-data-dashboard">Click Here</a>
                               </div>
                             </div>
-                        </div>
+                        </div> -->
                     <!-- <div class="col-md-3" style="float:left">
                       <div class="card mb-2">
                         <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
