--- a/about_us.html
+++ b/about_us.html
@@ -32,7 +32,7 @@
       <ul class="list-unstyled components">
 
         <li>
-          <a href="index.html">HOME</a>
+          <a href="stats.html">HOME</a>
         </li>
         <li class="active">
           <a href="about_us.html">ABOUT</a>
@@ -159,7 +159,7 @@
                     </div>
                   </div>
                 </div>
-                
+
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
                     <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQHWhWASLFprgQ/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=9gWb1QSAgimfSqDi8_88J-2pWmHDv0Qf8zxUrZPKXAA" alt="Card image cap">
