--- a/stats.html
+++ b/stats.html
@@ -77,13 +77,13 @@
                 <a class="nav-link" id = "TexasCases" href="#">Case</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Recovery</a>
+                <!-- <a class="nav-link" href="#">Recovery</a> -->
               </li>
               <li class="nav-item">
                 <a class="nav-link" id = "TexasDeaths" href="#">Fatality</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Test</a>
+                <!-- <a class="nav-link" href="#">Test</a> -->
               </li>
             </ul>
           </div>
