--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       <ul class="list-unstyled components">
 
         <li>
-          <a href="index.html">HOME</a>
+          <a href="stats.html">HOME</a>
         </li>
         <li>
           <a href="about_us.html">ABOUT</a>
