--- a/projects.html
+++ b/projects.html
@@ -120,9 +120,9 @@
               <!--First slide-->
               <div class="carousel-item active">
 
-                <div class="col-md-3" style="float:left">
-                  <div class="card mb-2">
-                    <img class="card-img-top" src="img/Qiwei.png" alt="Card image cap">
+                <div class="col-md-3"  style="float: left">
+                  <div class="card mb-2" style="height: 550px;">
+                    <img class="card-img-top" src="img/Qiwei.png" height=150px width=100px alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Dr Qiwei Li</h4>
                       <p class="card-text">We develop this web app to help DFW policy-makers assess the impact of different interventions on the spread of COVID-19 in the DFW area.</p>
@@ -131,9 +131,9 @@
                   </div>
                 </div>
 
-                <div class="col-md-3" style="float:left">
-                  <div class="card mb-2">
-                    <img class="card-img-top" src="img/Wade.png" alt="Card image cap">
+                <div class="col-md-3"  style="float: left">
+                  <div class="card mb-2" style="height: 550px;">
+                    <img class="card-img-top" src="img/Wade.png" height=150px width=100px alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Dr. Wade Fagen-Ulmschneider</h4>
                       <p class="card-text">91-DIVOC is home to many data-forward, high-quality, interactive, and informative visualizations during the pandemic.</p>
@@ -142,9 +142,9 @@
                   </div>
                 </div>
 
-                <div class="col-md-3" style="float:left">
-                  <div class="card md-2">
-                    <img class="card-img-top" src="img/Covid.png" alt="Card image cap">
+                <div class="col-md-3" style="float: left">
+                  <div class="card md-2" style="height: 550px;">
+                    <img class="card-img-top" src="img/Covid.png" height=150px width=100px alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Covid Visualization</h4>
                       <p class="card-text">Texas specific visualizaion related to every county in Texas along with the Hopital resource utilization during the Pandemic</p>
@@ -153,9 +153,9 @@
                   </div>
                 </div>
 
-                <div class=" col-md-3" style="float:left">
-                        <div class="card md-2">
-                          <img class="card-img-top" src="img/IUPR.png" alt="Card image cap">
+                <div class=" col-md-3"  style="float: left">
+                        <div class="card md-2" style="height: 550px;">
+                          <img class="card-img-top" src="img/IUPR.png" height=150px width=100px alt="Card image cap">
                           <div class="card-body">
                             <h4 class="card-title">The Institute of Urban Policy Research at the University of Texas at Dallas</h4>
                             <p class="card-text">This report shows the number and the rate of confirmed infections per 100,000 population.</p>
