--- a/stats.html
+++ b/stats.html
@@ -94,8 +94,8 @@
         <!-- Subtopics row-->
         <div class="row">
 
-          <div class="col-md">
-            <div class="card img-card-container" style="width: 12rem;">
+          <div class="col-md" >
+            <div class="card img-card-container" style="width: 12rem;height: 460px;">
               <img class="card-img-top card-image-hover" src="img/Virus.png" alt="Card image cap">
 
               <div class="middle-card-image-content">
@@ -104,38 +104,38 @@
 
               <div class="card-body">
                 <h5 class="card-title">Precautions</h5>
-                <p class="card-text">Precautions to be taken to prevent Covid19</p>
+                <p class="card-text">Precautions to be taken to prevent Covid19</p><br><br>
                 <a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html" class="btn btn-primary">Click Here</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md">
-            <div class="card img-card-container" style="width: 12rem;">
+          <div class="col-md" >
+            <div class="card img-card-container" style="width: 12rem;height: 460px;">
               <img class="card-img-top card-image-hover" src="img/noun_Medical Report_3283836.png" alt="Card image cap">
 
               <div class="middle-card-image-content">
                 <div class="card-image-text">Click</div>
               </div>
 
-              <div class="card-body">
-                <h5 class="card-title">COVID Self Check</h5>
+              <div class="card-body"  >
+                <h5 class="card-title">COVID Self Check</h5><br>
                 <p class="card-text">Take a self test to check for Covid 19</p>
                 <a href="https://landing.google.com/screener/covid19" class="btn btn-primary">Click Here</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md">
-            <div class="card img-card-container" style="width: 12rem;">
+          <div class="col-md" >
+            <div class="card img-card-container" style="width: 12rem;height: 460px;">
               <img class="card-img-top card-image-hover" src="img/noun_brain care_2418090.png" alt="Card image cap">
 
               <div class="middle-card-image-content">
                 <div class="card-image-text">Click</div>
               </div>
 
-              <div class="card-body">
-                <h5 class="card-title">Covid 19 Medical Care</h5>
+              <div class="card-body" >
+                <h5 class="card-title">Covid 19 Medical Care</h5><br>
                 <p class="card-text">Find the medical care nearest to UTD</p>
                 <a href="https://medicalcityhealthcare.com/covid-19/" class="btn btn-primary">Click Here</a>
               </div>
@@ -144,7 +144,7 @@
 
 
           <div class="col-md">
-            <div class="card img-card-container" style="width: 12rem;">
+            <div class="card img-card-container" style="width: 12rem;height: 460px;">
               <img class="card-img-top card-image-hover" src="img/noun_data visualization_2034138.png" alt="Card image cap">
 
               <div class="middle-card-image-content">
@@ -153,14 +153,14 @@
 
               <div class="card-body">
                 <h5 class="card-title">COVID 19 Visualization</h5>
-                <p class="card-text">Data Modelling and Visualizations</p>
+                <p class="card-text">Data Modelling and Visualizations</p><br>
                 <a href="https://jariel97.github.io/projects.html" class="btn btn-primary">Click Here</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md">
-            <div class="card img-card-container" style="width: 12rem;">
+          <div class="col-md" >
+            <div class="card img-card-container" style="width: 12rem;" style="height:460px;">
               <img class="card-img-top card-image-hover" src="img/noun_empathy_2683229.png" alt="Card image cap">
 
               <div class="middle-card-image-content">
