--- a/about_us.html
+++ b/about_us.html
@@ -126,7 +126,7 @@
               <div class="carousel-item active">
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQGU_Av5Iqu2dA/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=Tp0oxekVPgkR_5VuybLyGSerzB_g0jWG7PCJilui7VE" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/84kW4WB/Murat.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Murat<br> Kantarcioglu</h4>
                       <p class="card-text">Professor<br>Department of Computer Science<br>
@@ -138,7 +138,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://utdallas.edu/chairs/files/Fishwick_1.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/NYqYkK2/Fishwick-1.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Paul<br> Fishwick</h4>
                       <p class="card-text">Professor<br>Department of Computer Science<br>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQEy-FR1Tt9M_g/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=Mu2hbmyRn-rp89Q5BJv5QzWeG9kcvyamNdoZSfYb978" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/JyLt9cL/Gopal-Gupta.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Gopal<br> Gupta</h4>
                       <p class="card-text">Professor<br>
@@ -162,7 +162,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQHWhWASLFprgQ/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=9gWb1QSAgimfSqDi8_88J-2pWmHDv0Qf8zxUrZPKXAA" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/6bXNvN2/Karen-Doore.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Karen<br> Doore</h4>
                       <p class="card-text">Senior Lecturer<br>
@@ -208,7 +208,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C5603AQFAfjBRrtKfLw/profile-displayphoto-shrink_800_800/0?e=1602115200&v=beta&t=x_KGeCXw9AaW88gk4vwDm_is8x97Jsosx7-EYGNxKjY" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/cXD1Q87/ashwin-Rama-2.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Ashwin Ramananda</h4>
                       <p class="card-text">
@@ -220,7 +220,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C5603AQFpfSInw88gRw/profile-displayphoto-shrink_800_800/0?e=1602115200&v=beta&t=0eQRZ3SnY7vXKvBNYYJZtKI7A5NpJ_zIciYm15ISzdw" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/1sgYhRD/Ashwin.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Ashwin Subramanium</h4>
                       <p class="card-text">Web Developer<br>Graduate Student of Computer Science</p>
@@ -231,7 +231,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQH_D8H59tkfEA/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=t3J-C_ndQpm_5XtaBV7iajEwqRmAeKXN-uggtON4OIs" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/HqMhVj3/Jariel.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Jariel <br> Gojar</h4>
                       <p class="card-text">Developer<br>Graduate Student of Computer Science</p>
@@ -242,7 +242,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://i.ibb.co/k4J00VZ/Whats-App-Image-2020-04-12-at-10-46-17-PM.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/P6G69nv/Raghavan.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Raghavan Sivakumar</h4>
                       <p class="card-text">Web Developer<br>Graduate Student of Computer Science</p>
@@ -261,7 +261,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4E03AQHPIC0DfVLtoQ/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=b7uLrwD1FDFdETQ-VcvNM8GKO1AxOSpoE3RmkAhcJFs" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/C1f0tfm/Chaitanya.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Chaitanya Atluri</h4>
                       <p class="card-text">Web Developer<br>Graduate Student of Computer Science</p>
@@ -272,7 +272,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4D03AQFG2DQewWT0DQ/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=ros7G8yFQH0jf__tdXK6gScgFk-TZIETl2K7v6JfmDo" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/yBcTWwm/Snehal.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Snehal Pendharkar
                       </h4>
@@ -284,7 +284,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://ca.slack-edge.com/T011B3PH095-U013X8UDEUT-3d7874001e13-512" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/F81MyR1/Sumayah.png" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Sumayah Abdulla</h4>
                       <p class="card-text">UX Designer<br>Student of Arts and Technology</p>
@@ -295,7 +295,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4D03AQH0OsS9GKWNzQ/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=EHPMPFH93fBcnmHcj11OwTgVZsssAhlrSA4KBmuHMS0" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/G3Q0dGJ/Alessandra.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Alesandra Bell
                       </h4>
@@ -314,7 +314,7 @@
               <div class="carousel-item">
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C4D03AQG3TjoZRRLLSg/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=MFhUhRIqwEwJ3-p8bTVfNVIVXj6K-a4rJfB0T6ytqZk" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/fS77HZM/AlixKast.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Alix Kast
                       </h4>
@@ -326,7 +326,7 @@
 
                 <div class="col-md-3" style="float:left">
                   <div class="card mb-2">
-                    <img class="card-img-top" src="https://media-exp1.licdn.com/dms/image/C5103AQFHzyXJBX3szg/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=TcT3wn4zAMRWDxDP0k24lEP3AXHe5cn9aIOcYzKGZew" alt="Card image cap">
+                    <img class="card-img-top" src="https://i.ibb.co/B24WK49/Debargha.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h4 class="card-title">Debargha Ghosh</h4>
                       <p class="card-text">DataScience Developer<br>Graduate Student of Computer Science</p>
